--- a/hope.html
+++ b/hope.html
@@ -132,6 +132,22 @@
       color: white;
     }
 
+    @media (max-width: 768px) {
+      .section h2 {
+        font-size: 1.8rem;
+      }
+      .quotes {
+        font-size: 1.1rem;
+      }
+      .images img {
+        width: 180px;
+      }
+      .resources a {
+        font-size: 1.1rem;
+        padding: 10px;
+      }
+    }
+
     @media (max-width: 600px) {
       h1 {
         font-size: 2rem;
@@ -163,6 +179,32 @@
         font-size: 0.9rem;
       }
 
+      .form-container button {
+        font-size: 0.9rem;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .section h2 {
+        font-size: 1.5rem;
+      }
+      .quotes {
+        font-size: 1rem;
+      }
+      .images img {
+        width: 140px;
+      }
+      .resources a {
+        font-size: 1rem;
+        padding: 8px;
+      }
+      .form-container {
+        padding: 15px;
+      }
+      .form-container input,
+      .form-container textarea {
+        font-size: 0.9rem;
+      }
       .form-container button {
         font-size: 0.9rem;
       }
@@ -216,7 +258,7 @@
   </div>
 
   <script>
-    const API_URL = 'http://localhost:5000/api/hope-messages';
+    const API_URL = 'https://black-heart.onrender.com/api/hope-messages';
     const hopeForm = document.getElementById('hopeForm');
     const messagesContainer = document.getElementById('messagesContainer');
 
