--- a/index.html
+++ b/index.html
@@ -62,26 +62,34 @@
     }
 
     .links {
-      position: static; /* Supprime la position absolue */
       display: flex;
-      flex-wrap: wrap; /* Permet aux liens de passer à la ligne */
-      justify-content: center; /* Centre les liens horizontalement */
-      gap: 10px; /* Ajoute un espacement entre les liens */
-      margin-top: 20px; /* Ajoute un espacement au-dessus des liens */
+      justify-content: space-between; /* Place les boutons de part et d'autre */
+      align-items: center;
+      margin-top: 20px;
+      padding: 0 20px; /* Ajoute un espacement horizontal */
+      gap: 40px; /* Ajoute un espacement entre les boutons */
     }
 
     .links a {
-      color: black; /* Texte des boutons en noir */
       font-size: 1.2rem;
-      padding: 10px 20px;
-      border: 2px solid #f0f0f0;
+      padding: 15px 30px;
+      color: white;
+      background-color: #0a7d3e; /* Vert similaire au bouton "Visitez maintenant" */
       border-radius: 5px;
-      transition: background-color 0.3s, color 0.3s;
+      text-decoration: none;
+      transition: background-color 0.3s;
     }
 
     .links a:hover {
-      background-color: #f0f0f0;
-      color: #000;
+      background-color: #086c35; /* Couleur plus foncée au survol */
+    }
+
+    .support-button {
+      margin-right: auto; /* Aligne à gauche */
+    }
+
+    .contact-button {
+      margin-left: auto; /* Aligne à droite */
     }
 
     .notification-badge {
@@ -180,18 +188,43 @@
       Sentez-vous vraiment vous-même, ici pas de filtre de faux bonheurs, pas de concurrence, ici : vous avez le droit d'être triste, anxieux, dépressif...
     </div>
     <div class="links">
-      <a href="./about.html">À propos de BLACK HEART</a>
-      <a href="./quotes.html">Découvrez nos citations</a>
-      <a href="./soutien.html">Besoin de soutien ?</a>
-      <a href="./contact.html">Contactez-nous</a>
-      <a href="./temoignages.html">Témoignages</a>
-      <a href="./hope.html">hope</a>
-      <a href="./forum.html" class="forum-link">
-        Rejoignez notre forum
-        <span id="notificationBadge" class="notification-badge" style="display: none;">0</span>
+      <!-- Boutons repositionnés et corrigés -->
+      <a href="./soutien.html" class="support-button">Besoin de soutien?</a>
+      <a href="./contact.html" class="contact-button">Contactez-nous</a>
+    </div>
+  </section>
+
+  <section style="background-color: #0a7d3e; padding: 50px 20px; color: white; text-align: center;">
+    <h2 style="font-family: 'Playfair Display', serif; font-size: 2rem; margin-bottom: 30px;">nous proposons</h2>
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
+      <a href="./hope.html" style="flex: 1 1 calc(25% - 20px); max-width: 250px; text-align: center; text-decoration: none; color: inherit;">
+        <img src="./images/hope.jpg" alt="Espoir" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;">
+        <h3 style="margin-top: 10px;">avoir de l'espoir</h3>
+        <p>ayez espoir en vous-même</p>
+      </a>
+      <a href="./quotes.html" style="flex: 1 1 calc(25% - 20px); max-width: 250px; text-align: center; text-decoration: none; color: inherit;">
+        <img src="./images/citations.jpg" alt="citations" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;">
+        <h3 style="margin-top: 10px;">citations</h3>
+        <p>découvrez nos citations aléatoires</p>
+      </a>
+      <a href="./temoignages.html" style="flex: 1 1 calc(25% - 20px); max-width: 250px; text-align: center; text-decoration: none; color: inherit;">
+        <img src="./images/temoignages.jpg" alt="Témoignages" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;">
+        <h3 style="margin-top: 10px;">témoignages</h3>
+        <p>découvrez la section témoignages</p>
+      </a>
+      <a href="./about.html" style="flex: 1 1 calc(25% - 20px); max-width: 250px; text-align: center; text-decoration: none; color: inherit;">
+        <img src="./images/apropos.jpg" alt="À propos" style="width: 100%; height: 200px; object-fit: cover; border-radius: 10px;">
+        <h3 style="margin-top: 10px;">à propos</h3>
+        <p>à propos de cœur noir</p>
       </a>
     </div>
   </section>
+  
+  <section style="background-image: url('./images/bkground%2001.jpg'); background-size: cover; background-position: center; padding: 50px 20px; text-align: center; color: white; height: 300px;">
+    <p style="font-size: 1.2rem; margin-bottom: 20px;">découvrez notre forum de soutien</p>
+    <a href="./forum.html" style="padding: 15px 30px; font-size: 1rem; color: white; background-color: #0a7d3e; border-radius: 5px; text-decoration: none; transition: background-color 0.3s; margin-top: 10px; display: inline-block;">visitez maintenant</a>
+  </section>
+
   <script>
     let missedMessages = 0;
     try {
@@ -221,4 +254,9 @@
     }
   </script>
 </body>
+<footer style="background-color: #fcfcfc; color:#0a7d3e; text-align: center; padding: 20px; font-family: 'Playfair Display', serif;">
+  <div style="display: flex; flex-direction: column; align-items: center; gap: 10px;">
+    <p style="margin: 0; font-size: 1rem;">© 2025 BLACK HEART - Créé par [gibrilMD]</p>
+  </div>
+</footer>
 </html>
